--- a/src/octopull.css
+++ b/src/octopull.css
@@ -10,7 +10,8 @@
 }
 
 .diff-table > colgroup > col:nth-of-type(1),
-.diff-table > colgroup > col:nth-of-type(2) {
+.diff-table:not(.file-diff-split) > colgroup > col:nth-of-type(2),
+.diff-table.file-diff-split > colgroup > col:nth-of-type(3) {
 	width: 60px !important;
 }
 
