--- a/src/templates/line-dot.html
+++ b/src/templates/line-dot.html
@@ -19,9 +19,9 @@
 						checkstyle
 					</span>
 					<span class="select-menu-item-actions">
-						<a href="#" class="tooltipped tooltipped-w" aria-label="Turn into comment" data-bind="click: comment">
+						<!--<a href="#" class="tooltipped tooltipped-w" aria-label="Turn into comment" data-bind="click: comment">
 							<span class="octicon octicon-comment"></span>
-						</a>
+						</a>-->
 					</span>
 				</li>
 			</ul>
