Display tool sent with warning

--- a/src/templates/line-dot.html
+++ b/src/templates/line-dot.html
@@ -15,8 +15,7 @@
 					</div>
 					<span class="select-menu-item-text" data-bind="text: message">
 					</span>
-					<span class="violation-tool">
-						checkstyle
+					<span class="violation-tool" data-bind="text: $data.tool">
 					</span>
 					<span class="select-menu-item-actions">
 						<!--<a href="#" class="tooltipped tooltipped-w" aria-label="Turn into comment" data-bind="click: comment">
