--- a/src/templates/line-dot.html
+++ b/src/templates/line-dot.html
@@ -15,13 +15,13 @@
 					</div>
 					<span class="select-menu-item-text" data-bind="text: message">
 					</span>
-					<span class="violation-tool">
+					<!--<span class="violation-tool">
 						checkstyle
-					</span>
+					</span>-->
 					<span class="select-menu-item-actions">
-						<!--<a href="#" class="tooltipped tooltipped-w" aria-label="Turn into comment" data-bind="click: comment">
+						<a href="#" class="tooltipped tooltipped-w" aria-label="Turn into comment" data-bind="if: canComment, click: comment">
 							<span class="octicon octicon-comment"></span>
-						</a>-->
+						</a>
 					</span>
 				</li>
 			</ul>
