--- a/src/templates/line-dot.html
+++ b/src/templates/line-dot.html
@@ -15,9 +15,8 @@
 					</div>
 					<span class="select-menu-item-text" data-bind="text: message">
 					</span>
-					<!--<span class="violation-tool">
-						checkstyle
-					</span>-->
+					<span class="violation-tool" data-bind="text: tool">
+					</span>
 					<span class="select-menu-item-actions">
 						<a href="#" class="tooltipped tooltipped-w" aria-label="Turn into comment" data-bind="if: canComment, click: comment">
 							<span class="octicon octicon-comment"></span>
