--- a/src/templates/overview.html
+++ b/src/templates/overview.html
@@ -16,25 +16,37 @@
             <ul class="select-menu-list" data-bind="visible: activeTab() == 'filters'">
               <!-- ko foreach: tools -->
               <li class="select-menu-item" data-bind="click: function() { active(!active()) }">
-                <span class="select-menu-item-text"><span class="octicon octicon-primitive-dot" data-bind="visible: active"></span>&nbsp;<span data-bind="text: name"></span> (<span data-bind="text: $parent.warningsForTool(name)().length"></span>)</span>
+                <span class="select-menu-item-text"><span class="octicon octicon-primitive-dot" data-bind="style: { color: active() ? '' : '#dddddd' }"></span>&nbsp;<span style="font-style: italic;" data-bind="if: name == null">unknown</span><span data-bind="text: name"></span> (<span data-bind="text: $parent.warningsForTool(name)().length"></span>)</span>
               </li>
               <!-- /ko -->
             </ul>
-            <ul class="select-menu-list" data-bind="foreach: selectedWarnings, visible: activeTab() == 'warnings'">
+            <ul class="select-menu-list" data-bind="visible: activeTab() == 'warnings'">
+			  <!-- ko foreach: selectedWarnings -->
               <li class="select-menu-item">
-                <div class="violation-severity tooltipped tooltipped-e violation-severity-warning" aria-label="warning">
-                  <span class="octicon octicon-primitive-dot"></span>
+				<div class="violation-severity tooltipped tooltipped-e violation-severity-warning" aria-label="warning">
+                    <span class="octicon octicon-primitive-dot"></span>
                 </div>
-                <span class="select-menu-item-text"><span data-bind="text: message"></span> : <span data-bind="text: line"></span></span>
-                <span class="select-menu-item-text" data-bind="text: path"></span>
+				<div>
+                  <span class="select-menu-item-text" data-bind="text: message"></span>
+				</div>
+				<div>
+				  <span class="select-menu-item-text"><span data-bind="text: path" class="css-truncate"></span> (<span data-bind="text: line"></span>)</span>
+				</div>
+                <!--<span class="select-menu-item-text" data-bind="text: path"></span>
                 <span class="violation-tool" data-bind="text: tool"></span>
                 <span class="select-menu-item-actions">
                   <a class="tooltipped tooltipped-w" aria-label="Go to line" data-bind="attr: { href: $parent.href(path, line, commit) }"><span class="octicon octicon-chevron-right"></span></a>
                   <!--<a href="#" class="tooltipped tooltipped-w" aria-label="Turn into comment" data-bind="if: canComment, click: comment">
                     <span class="octicon octicon-comment"></span>
                   </a>-->
-                </span>
+                <!--</span>-->
               </li>
+			  <!-- /ko -->
+			  <!-- ko if: selectedWarnings().length == 0 -->
+               <li class="select-menu-item">
+			     <span class="select-menu-item-text">There are no warnings that match the set filters.</span>
+              </li>
+			  <!-- /ko -->
             </ul>
         </div>
     </div>
